# ft70d

./: .gitignore  CMakeLists.txt  README.md
apps/blinky/: CMakeLists.txt  blinky.c
platform/ft70d/: CMakeLists.txt  startup_h8sx.c
toolchains/: gcc-h8300-hms.cmake
